# marokani

./: .gitignore  .travis.yml  README.md  marokani.cabal
Language/: Calc.hs  MaroKani.hs
Language/MaroKani/: Eval.hs  Parser.hs  Prim.hs  Types.hs
Network/: MaroKani.hs
Network/MaroKani/: Bot.hs  Types.hs
example/: Bot.hs  Lang.hs  Repl.hs
lang/: std.marokani
src/Language/: Calc.hs  MaroKani.hs
src/Language/MaroKani/: Eval.hs  Parser.hs  Prim.hs  Types.hs  Utils.hs
src/Network/: MaroKani.hs
src/Network/MaroKani/: Bot.hs  Internal.hs  Types.hs
test/: Lang.hs
