name:                marokani
version:             0.0.0.0
synopsis:            kani chat library
author:              maro
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag debug
  default:     False

library
  ghc-options:       -Wall -O2
  hs-source-dirs:    src
  default-language:  Haskell2010

  exposed-modules:     
    Network.MaroKani
    Network.MaroKani.Bot
    Language.MaroKani
    Language.Calc

  other-modules:
    Network.MaroKani.Internal
    Network.MaroKani.Types
    Language.MaroKani.Eval
    Language.MaroKani.Parser
    Language.MaroKani.Prim
    Language.MaroKani.Types

  default-extensions:
    FlexibleContexts,
    FlexibleInstances,
    OverloadedStrings

  build-depends:
    base >=4.4 && <5,
    vector >=0.10,
    bytestring >=0.10.0.0,
    unordered-containers >=0.2.3.0,
    containers >=0.5.0.0,
    mtl >=2.0.0.0,
    http-conduit >=2.0.0,
    HTTP >=4000.2.0,
    aeson >=0.6.0.0,
    stm >=2.4,
    async >=2.0.0.0,
    exceptions >=0.3,
    parsers >=0.10,
    trifecta >=1.0,
    ansi-wl-pprint >=0.6.6,
    random >=1.0.1.0

executable bot
  main-is:           Bot.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    example/

  build-depends:
    base  >=4.4 && <5,
    marokani,
    exceptions >=0.3,
    mtl >=2.0.0.0

executable repl
  main-is:           Repl.hs
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  hs-source-dirs:    example/

  build-depends:
    base  >=4.4 && <5,
    marokani,
    exceptions >=0.3
